--- a/index.html
+++ b/index.html
@@ -344,6 +344,10 @@ canvas.addEventListener("click", (e) => {
     mode = null;
   }
 });
+document.getElementById("calc").onclick = () => {
+  document.getElementById("output").innerHTML =
+    "<b>計算ボタンが押されました</b>";
+};
 
 </script>
 </body>
